--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/mocha": "^2.2.38",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chai-spies": "^0.7.1",
     "coveralls": "^2.11.15",
     "cross-env": "^3.1.4",
@@ -38,6 +39,7 @@
     "karma-chai": "^0.1.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
+    "karma-es6-shim": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-typescript": "^2.1.7",
