--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-executor",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Redux enhancer for handling side effects.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -31,7 +31,6 @@
   "devDependencies": {
     "@types/mocha": "^2.2.38",
     "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
     "chai-spies": "^0.7.1",
     "coveralls": "^2.11.15",
     "cross-env": "^3.1.4",
@@ -50,8 +49,8 @@
     "rimraf": "^2.5.4",
     "ts-loader": "^2.0.0",
     "tslint": "^4.4.2",
-    "tslint-loader": "^3.3.0",
-    "typescript": "2.1.5",
+    "tslint-loader": "^3.4.2",
+    "typescript": "^2.1.6",
     "webpack": "2.2.1"
   },
   "peerDependencies": {
