--- a/package.json
+++ b/package.json
@@ -29,30 +29,30 @@
     "url": "https://github.com/piotr-oles/redux-executor/issues"
   },
   "devDependencies": {
-    "@types/mocha": "^2.2.38",
+    "@types/mocha": "^2.2.40",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-spies": "^0.7.1",
-    "coveralls": "^2.11.15",
-    "cross-env": "^3.1.4",
-    "karma": "^1.3.0",
+    "coveralls": "^2.13.0",
+    "cross-env": "^4.0.0",
+    "karma": "^1.6.0",
     "karma-chai": "^0.1.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
     "karma-es6-shim": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-typescript": "^2.1.7",
-    "karma-webpack": "^2.0.1",
+    "karma-typescript": "^3.0.0",
+    "karma-webpack": "^2.0.3",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "redux": "^3.1.0",
-    "rimraf": "^2.5.4",
-    "ts-loader": "^2.0.0",
-    "tslint": "^4.4.2",
-    "tslint-loader": "^3.4.2",
-    "typescript": "^2.1.6",
-    "webpack": "2.2.1"
+    "rimraf": "^2.6.1",
+    "ts-loader": "^2.0.3",
+    "tslint": "^5.1.0",
+    "tslint-loader": "^3.5.2",
+    "typescript": "^2.2.2",
+    "webpack": "^2.3.3"
   },
   "peerDependencies": {
     "redux": "^3.1.0"
