--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "lib": [
       "dom",
       "es6"
+    ],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
     ]
   },
   "include": [
